[TF-1332] Sending total order price into VPrHodnotaND

--- a/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
@@ -100,6 +100,10 @@
                 <ord:note></ord:note>
                 <ord:intNote>{{ pohodaOrder.internalNote }}</ord:intNote>
                 <ord:parameters>
+                    <typ:parameter>
+                        <typ:name>VPrHodnotaND</typ:name>
+                        <typ:currencyValue>{{ pohodaOrder.totalPriceWithVat.amount }}</typ:currencyValue>
+                    </typ:parameter>
                     {% if pohodaOrder.pohodaTransportId is not null -%}
                         <typ:parameter>
                             <typ:name>RefVPrDopravaTyp</typ:name>
