--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -54,7 +54,7 @@
                                                     {{ 'Facebook'|trans }}
                                                 </a>
                                             {% else %}
-                                                <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/tropicliberec.cz/" target="_blank">
+                                                <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/tropicfishing.cz" target="_blank">
                                                     {{ 'Facebook'|trans }}
                                                 </a>
                                             {% endif %}
