[TF-1399] design: add style for christmas banner

--- a/assets/styles/frontend/common/layout/layout.less
+++ b/assets/styles/frontend/common/layout/layout.less
@@ -34,7 +34,9 @@ img {
     }
 
     &__header {
+        position: relative;
         margin-bottom: 15px;
+        z-index: @z-index-menu;
 
         background-color: @color-base;
 
