[TF-1399] design: add style for christmas banner
(cherry picked from commit 166c916fbeb0f455d906b97da4627f7f91bc5b2e)

--- a/assets/styles/frontend/common/main-base.less
+++ b/assets/styles/frontend/common/main-base.less
@@ -74,6 +74,7 @@
 @import "components/window/popup.less";
 
 //// box
+@import "components/box/action-banner.less";
 @import "components/box/breadcrumb.less";
 @import "components/box/cookies.less";
 @import "components/box/dropdown.less";
