Added mobile size for homepage banner.

--- a/templates/Front/Content/Advert/banners.html.twig
+++ b/templates/Front/Content/Advert/banners.html.twig
@@ -6,6 +6,7 @@
                     <li class="list-grid-images__portrait__item">
                         <a href="{{ fourthRectangle.link }}" class="list-grid-images__portrait__link">
                             {{ image(fourthRectangle, {size: 'rectangle', alt: fourthRectangle.name}) }}
+                            {{ image(fourthRectangle, {type: 'mobile', alt: fourthRectangle.name}) }}
                         </a>
                     </li>
                 {% endif %}
