When all variants of a product are out of stock, its availability is Temporarily unavailable.

--- a/templates/Front/Content/Product/productViewAvailability.html.twig
+++ b/templates/Front/Content/Product/productViewAvailability.html.twig
@@ -1,6 +1,6 @@
 {% import 'Front/Content/Product/saleStockQuantityMacro.html.twig' as saleStockQuantity %}
 {% import 'Front/Content/Product/productAvailabilityInDaysMacro.html.twig' as availabilityInDays %}
-{% if productView.action.isMainVariant %}
+{% if productView.action.isMainVariant and productView.isAnyVariantInStock %}
     {{ 'Dostupnost dle varianty'|trans }}
 {% elseif productView.realSaleStocksQuantity > 0 %}
     {{ saleStockQuantity.showInfo(productView.realSaleStocksQuantity, productView.unitName) }}
