--- a/assets/styles/frontend/common/components/list/grid-images.less
+++ b/assets/styles/frontend/common/components/list/grid-images.less
@@ -24,6 +24,24 @@
             margin-left: -@grid-images-item-gap;
         }
 
+        &__item {
+            width: 100%;
+            margin-bottom: @grid-images-item-gap-small;
+            padding-left: @grid-images-item-gap-small;
+
+            font-size: 0;
+
+            @media @query-md {
+                width: calc(~"@{calc-base} / 3");
+            }
+
+            @media @query-lg {
+                width: calc(~"@{calc-base} / 3");
+                margin-bottom: @grid-images-item-gap;
+                padding-left: @grid-images-item-gap;
+            }
+        }
+
         &__link {
             position: relative;
             display: block;
@@ -41,28 +59,8 @@
             }
 
             img {
-                .center-image()
-            }
-        }
+                .center-image();
 
-        &__item {
-            width: 100%;
-            margin-bottom: @grid-images-item-gap-small;
-            margin-left: @grid-images-item-gap-small;
-
-            font-size: 0;
-
-            @media @query-md {
-                width: calc(~"@{calc-base} / 3 - @{grid-images-item-gap-small}");
-            }
-
-            @media @query-lg {
-                width: calc(~"@{calc-base} / 3 - @{grid-images-item-gap}");
-                margin-bottom: @grid-images-item-gap;
-                margin-left: @grid-images-item-gap;
-            }
-
-            img {
                 border-radius: @radius;
 
                 @media @query-sm {
@@ -74,17 +72,9 @@
 
     &__portrait {
         .reset-ul();
-        .clearfix();
         width: 100%;
         
         font-size: 0;
-
-        &__link {
-            position: relative;
-            display: block;
-
-            font-size: 0;
-        }
 
         &__item {
             display: inline-block;
@@ -95,12 +85,45 @@
             @media @query-lg {
                 margin-bottom: @grid-images-item-gap;
             }
+        }
+
+        &__link {
+            position: relative;
+            display: block;
+            height: 0;
+            padding-bottom: 74.197%;
+
+            font-size: 0;
+
+            @media @query-sm {
+                padding-bottom: 320px;
+            }
+
+            @media @query-md {
+                padding-bottom: 24.4%;
+            }
 
             img {
+                .center-image();
+
                 border-radius: @radius;
 
                 @media @query-sm {
                     border-radius: @radius-big;
+                }
+
+                &.image-noticer-rectangle, &.image-noimage-rectangle {
+                    display: none;
+
+                    @media @query-md {
+                        display: block;
+                    }
+                }
+
+                &.image-noticer-mobile, &.image-noimage-mobile {
+                    @media @query-md {
+                        display: none;
+                    }
                 }
             }
         }
