customize filtering on mobile device

--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -67,6 +67,7 @@
                                     filterFormSubmitted,
                                     allowBrandLinks
                                 ) }}
+                                <span class="box-list__filter-opener__button btn js-product-filter-display-result">{{ 'Zobrazit výsledky'|trans }}</span>
                             </div>
                         </div>
                     {% endif %}
