FE product detail: display max amount message for variants

--- a/assets/styles/frontend/common/components/box/detail-add.less
+++ b/assets/styles/frontend/common/components/box/detail-add.less
@@ -164,6 +164,7 @@
             }
 
             &--payments {
+                margin-top: auto;
                 padding-left: 15px;
                 padding-right: 15px;
             }
