--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -39,12 +39,12 @@
     <div class="box-detail-add__buttons{% if type == 'detailVariant' %} box-detail-add__buttons--small-gap{% endif %}">
         {% if not product.isMainVariant %}
             {% if type == 'detailVariant' %}
-                <div class="box-detail-add__buttons__item-variant">
+                <div class="box-detail-add__buttons__item-variant js-spinbox-parent js-maximum-amount-container">
+                    <div class="in-message in-message--warning js-maximum-amount-warning display-none">
+                        {{ 'Větší množství není možné nakoupit'|trans }}
+                    </div>
                     <div class="in-add-to-cart">
                         <div class="in-add-to-cart__spinbox {% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
-                            <div class="in-message in-message--warning js-maximum-amount-warning display-none">
-                                {{ 'Větší množství není možné nakoupit'|trans }}
-                            </div>
                             <span class="form-input-spinbox js-spinbox">
                                 {{ form_widget(form.quantity, { attr: {
                                     class: 'form-input-spinbox__input input-no-style js-spinbox-input',
