contact address update

--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -23,7 +23,7 @@
                                     </span>
                                 </a>
                             {% endif %}
-                            <span class="box-contact__info__text"> 
+                            <span class="box-contact__info__text">
                                 {{ getShopInfoPhoneHours() }}
                             </span>
                         </div>
@@ -139,7 +139,7 @@
                 <div class="box-contact__payment">
                     <div class="box-contact__payment__item box-contact__payment__item--small">
                         <p class="box-contact__payment__item__text-big">TROPIC LIBEREC s.r.o.</p>
-                        {{ 'Vyhlídková 655, 463 12 Liberec 25<br>Vedené u Krajského soudu v Ústí nad Labem oddíl C,<br> vložka 16777.'|trans|raw }}
+                        {{ 'U Sadu 655, 463 12 Liberec 25<br>Vedené u Krajského soudu v Ústí nad Labem oddíl C,<br> vložka 16777.'|trans|raw }}
                     </div>
                     <div class="box-contact__payment__item">
                         <p class="box-contact__payment__item__text-big">{{ 'IČO: 25415981'|trans }}</p>
