Added availability to product filters.

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -3,3 +3,11 @@
         display: none;
     }
 }
+
+.box-filter__choice__content__tooltip-wrap {
+    position: relative;
+
+    .in-icon {
+        line-height: 21px;
+    }
+}
