[TF-1454] Changing coupon text

--- a/templates/Front/Content/Order/PromoCode/index.html.twig
+++ b/templates/Front/Content/Order/PromoCode/index.html.twig
@@ -1,6 +1,6 @@
 <div class="box-preview__coupone">
     <div class="box-preview__coupone__title">
-        {{ 'Máte slevový kupón?'|trans }}
+        {{ 'Máte slevový kupón nebo dárkový poukaz?'|trans }}
     </div>
     <div class="box-preview__coupone__code">
         <input class="box-preview__coupone__code__input input" placeholder="{{ 'Zadejte kód'|trans }}" type="text" id="js-promo-code-input" data-apply-code-url="{{ url('front_promo_code_apply') }}">
