design: add style for filter button

--- a/assets/styles/frontend/common/components/box/list.less
+++ b/assets/styles/frontend/common/components/box/list.less
@@ -109,7 +109,10 @@
 
         &__button {
             width: 100%;
-            font-size: @font-size-small;
+
+            &.active {
+                background-color: darken(@color-primary, 5%);
+            }
 
             @media @query-lg {
                 width: auto;
