--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -67,7 +67,9 @@
                                     filterFormSubmitted,
                                     allowBrandLinks
                                 ) }}
-                                <span class="box-list__filter-opener__button btn js-product-filter-display-result">{{ 'Zobrazit výsledky'|trans }}</span>
+                                <div class="box-list__filter-opener">
+                                    <span class="box-list__filter-opener__button  btn btn--large active js-product-filter-display-result">{{ 'Zobrazit výsledky'|trans }}</span>
+                                </div>
                             </div>
                         </div>
                     {% endif %}
