--- a/templates/Front/Content/Product/productSetViewMacro.html.twig
+++ b/templates/Front/Content/Product/productSetViewMacro.html.twig
@@ -74,7 +74,7 @@
 
                         <div class="in-availability">
                             <div class="in-availability__text" style="color: {{ productView.availabilityColor }};">
-                                {{ productView.availability }}
+                                {{ productView.availability|raw }}
                             </div>
                         </div>
 
