--- a/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
@@ -38,7 +38,7 @@
 
                                         <div class="in-availability in-availability--without-gap">
                                             <div class="in-availability__text" style="color: {{ productView.availabilityColor }};">
-                                                {{ productView.availability }}
+                                                {{ productView.availability|raw }}
                                             </div>
                                         </div>
                                     </div>
