design: add style for info message

--- a/assets/styles/frontend/common/components/box/chooser.less
+++ b/assets/styles/frontend/common/components/box/chooser.less
@@ -14,8 +14,6 @@
 
 @box-choose-item-check-width: 30px;
 
-@box-chooser-description-color: #1D4063;
-
 .box-chooser {
     margin-bottom: @box-chooser-bottom-gap;
 
@@ -107,7 +105,7 @@
             line-height: @box-chooser-text-line-height;
             opacity: 0.5;
 
-            color: @box-chooser-description-color;
+            color: @color-blue-medium;
             font-size: @font-size-mobile - 1px;
             font-family: @font-alt;
 
