--- a/assets/styles/frontend/common/components/box/order.less
+++ b/assets/styles/frontend/common/components/box/order.less
@@ -8,7 +8,6 @@
 @box-order-gap: 40px;
 @box-order-additional-gap: 50px;
 @box-order-info-content-width: 60%; 
-@box-order-registration-message-color: #1d4063;
 @box-order-info-row-item-gap: 12px;
 
 .box-order {
@@ -194,12 +193,12 @@
             font-family: @font-alt;
             text-decoration: none;
             transition: @transition;
-            color: @box-order-registration-message-color;
+            color: @color-blue-medium;
 
             &--clickable {
                 &:hover {
                     background-color: darken(@color-yellow, 10%);
-                    color: @box-order-registration-message-color;
+                    color: @color-blue-medium;
                 }
             }
 
