--- a/assets/styles/frontend/common/core/form/input.less
+++ b/assets/styles/frontend/common/core/form/input.less
@@ -4,7 +4,7 @@
 @input-padding-horizontal: 10px;
 @input-font-size: @font-size-big;
 @input-font-size-label: 12px;
-@input-font-color: #1D4063;
+@input-font-color: @color-blue-medium;
 @input-border-size: 1px;
 
 @select-arrow-width: 50px;
