--- a/assets/styles/frontend/common/core/variables.less
+++ b/assets/styles/frontend/common/core/variables.less
@@ -217,6 +217,7 @@
 
 //// Classic colors of design
 @color-blue: #0077b3;
+@color-blue-medium: #1d4063;
 @color-blue-dark: #002b41;
 @color-blue-light: #e5f1f7;
 @color-turquoise: #30b0d5;
