--- a/assets/styles/frontend/common/main-cart.less
+++ b/assets/styles/frontend/common/main-cart.less
@@ -7,6 +7,7 @@
 
 //// in
 @import "components/in/action.less";
+@import "components/in/info-message.less";
 @import "components/in/discount-message.less";
 
 //// list
