[TROPIC-20] Changed default ordering mode from recommended to newest for news category and its subcategories.

--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -78,7 +78,7 @@
                         {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category, 'type': constant('App\\Controller\\Front\\BestsellingProductController::TYPE_VERTICAL'), routeName: getRoute()})) }}
 
                         <div class="box-list__ordering">
-                            {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
+                            {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction', {'news': category.newsType or isNewsCategory})) }}
                             {% if paginationResult.results|length > 0 %}
                                 <div class="box-list__ordering__pagination">
                                     {% set entityName = 'products'|trans %}
