Added Luigi's Box.

--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -52,6 +52,7 @@
         {{ render(controller('App\\Controller\\Front\\GtmController:bodyAction')) }}
         {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesScriptsAction')) }}
         {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesGoogleAnalyticsScriptAction')) }}
+        {{ render(controller('App\\Controller\\Front\\ScriptController:embedAllPagesLuigisBoxScriptAction')) }}
 
         {% block html_body %}{% endblock %}
 
