Set detail now shows videos of a set instead of videos of individual set items.

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -15,3 +15,8 @@
 .box-filter__selected__item {
     padding-right: 25px;
 }
+
+//TODO KOD: https://shopsys.atlassian.net/browse/TROPIC-49
+.videos-box-no-margin {
+    margin-top: -48px;
+}
