--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -4,14 +4,16 @@
     product,
     productMainCategory,
     youtubeVideoIds,
-    productVisibleProductCategoryDomains
+    productVisibleProductCategoryDomains,
+    showVideos
 ) }}
 
 {% macro productTabs(
     product,
     productMainCategory,
     youtubeVideoIds,
-    productVisibleProductCategoryDomains
+    productVisibleProductCategoryDomains,
+    showVideos
 ) %}
     {% set domain = getDomain() %}
     {% set descriptionHeadline = 'Popis'|trans %}
@@ -139,8 +141,8 @@
                     {% endif %}
                 </div>
 
-                <div class="in-tab__content__bottom">
-                    {% if youtubeVideoIds %}
+                {% if showVideos and youtubeVideoIds is not empty %}
+                    <div class="in-tab__content__bottom">
                         <div id="video">
                             <div class="in-tab__content__title js-tabs-button" data-tab-id="videos">
                                 <a href="#" class="in-tab__content__title__link">
@@ -170,8 +172,8 @@
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
-                </div>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
