Fixed AJAX that got broken in TROPIC-20.

--- a/templates/Front/Content/Product/ajaxList.html.twig
+++ b/templates/Front/Content/Product/ajaxList.html.twig
@@ -30,7 +30,7 @@
     </div>
     <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
         <div class="box-list__ordering">
-            {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction')) }}
+            {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction', {'news': category.newsType or isNewsCategory})) }}
             {% if paginationResult.results|length > 0 %}
                 <div class="box-list__ordering__pagination">
                     {% set entityName = 'products'|trans %}
