Categories can now have tips.

--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -2,6 +2,7 @@
 {% import 'Front/Inline/Paginator/paginator.html.twig' as paginator %}
 {% import 'Front/Content/Product/filterFormMacro.html.twig' as productFilterForm %}
 {% import 'Front/Content/Blog/Article/blogArticleInCategoryMacro.html.twig' as blogArticleList %}
+{% import 'Front/Content/Category/categoryTip.html.twig' as categoryTip %}
 
 {% set domain = getDomain() %}
 
@@ -76,6 +77,8 @@
 
                     <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
                         {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category, 'type': constant('App\\Controller\\Front\\BestsellingProductController::TYPE_VERTICAL'), routeName: getRoute()})) }}
+
+                        {{ categoryTip.categoryTip(category, domain.id) }}
 
                         <div class="box-list__ordering">
                             {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListAction', {'news': category.newsType or isNewsCategory})) }}
